@@ -10,7 +10,7 @@ Once you have the code <a href="/building/checkout.html">checked out</a>, <a hre
     <li>Run the layout tests using the <tt>run-webkit-tests</tt> script and make sure they all pass.
         See the <a href="/quality/testwriting.html">testing page</a> for more information, as well as what you need to do if you've modified JavaScriptCore.</li>
     <li>Add any new files and layout tests to Subversion using the <tt>svn add</tt> command.</li>
-    <li>Prepare a changelog entry. The <tt>prepare-ChangeLog</tt> script will create a stub entry for you.</li>
+    <li>Prepare a change log entry. You may have to add entries to multiple ChangeLogs. The <tt>prepare-ChangeLog</tt> script will create stub entries for you.  See the <a href="#changelogs">paragraph about ChangeLogs</a> below.</li>
     <li>Create the patch using the <tt>svn-create-patch</tt> script.</li>
     <li>Upload the patch for review. In Bugzilla, be sure to set the <tt>review:?</tt> flag.</li>
     <li>Make any changes recommended by the reviewer.</li>
@@ -40,14 +40,15 @@ can be found on the <a href="/quality/testwriting.html">testing page</a>.</p>
 <p>New files and layout tests must be added to Subversion or else they won't be included in your patch. This is done with the <tt>svn add</tt> command.
 More information on Subversion commands can be found via <tt>svn help</tt> or the <a href="http://svnbook.red-bean.com/">Version Control with Subversion</a> online book.</p>
 
-<h3>ChangeLog</h3>
-<p>All patches require an entry to the ChangeLog. The <tt>prepare-ChangeLog</tt> script will create a basic entry containing a list
-of all files that have been changed.  Use this to write up a brief summary of the changes you've made.  Don't worry about the
-"Reviewed by NOBODY (OOPS!)" line, the person landing your patch will fill this in.</p>
+<a name="changelogs"><h3>ChangeLog files</h3></a>
+<p>ChangeLogs are simple text files which provide historical documentation for all changes to the WebKit project.  All patches require an entry to the ChangeLog. The <tt>prepare-ChangeLog</tt> script will create a basic entry containing a list of all files that have been changed.  The first line contains the date, your full name, and your email address.  Use this to write up a brief summary of the changes you've made.  Don't worry about the "Reviewed by NOBODY (OOPS!)" line, the person landing your patch will fill this in.</p>
+
+<p>There is one ChangeLog per top-level directory, if you changed code and tests you will need to edit at least two ChangeLogs. The <tt>prepare-ChangeLog</tt> script will create a stub entries for you.  You should edit these stubs to describe your change, including the full url to the bug (<a href="http://trac.webkit.org/changeset/43259">example entry</a>).  (You should set EMAIL_ADDRESS and CHANGE_LOG_NAME in your environment if you will be running this script frequently.)</p>
+
+<p>The line WARNING: NO TEST CASES ADDED OR CHANGED appears if prepare-ChangeLog did not detect the addition of test cases.  If your patch does not require test cases (or test cases are not possible), you should include a line stating such.  Otherwise all changes require test cases which should be mentioned in the ChangeLog.</p>
 
 <h3>Create the patch</h3>
-<p>WebKit uses the <tt>svn-create-patch</tt> script to create patches. This script supplements Subversion's <tt>diff</tt> command
-to better handle things like moved, added, and deleted files. This command is best run from the top level of your checkout to make
+<p>WebKit uses the <tt>svn-create-patch</tt> script to create patches.  <tt>svn-create-patch</tt> is just a small wrapper around Subversion's <tt>diff</tt> command which knows how to better handle moved, added, and deleted files. This command is best run from the top level of your checkout to make
 sure no changes are left out of your patch. It is not necessary to break a patch into multiple files.</p>
 
 <p><tt>svn-create-patch</tt> does not create a file automatically, you need to redirect the output yourself using something like: <tt>svn-create-patch > MyExcellentPatch.txt</tt></p>
@@ -62,7 +63,7 @@ the reviewer as revisions are made to your patch.</p>
 
 <h3>Landing in the tree</h3>
 <p>Once a patch is approved, someone with commit access will land your patch. Your responsibility for the patch does not end with
-the patch landing in the tree. There may be regressions from your change or additional feedback from reviewers after the patch has landed.
+the patch landing in the tree. There may be regressions from your change or additional feedback from reviewers after the patch has landed.  You can watch the tree at <a href="http://build.webkit.org">build.webkit.org</a> to make sure your patch builds and passes tests on all platforms.
 It is your responsibility to be available should regressions arise and to respond to additional feedback that happens after a check-in.</p>
 
 <h2>WebKit Scripts</h2>
