@@ -1,3 +1,12 @@
+2009-05-06  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Maciej Stachowiak.
+
+        Update Contributing instructions after feedback from Julie Parent.
+        https://bugs.webkit.org/show_bug.cgi?id=25611
+
+        * coding/contributing.html: Add a few more comments on ChangeLogs
+
 2009-04-17  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Steve Falkenburg
